kubernetes/environments/prod/garage/ingress.yaml
---
# IngressRoute fuer Garage S3 API (PROD)
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: garage-s3
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`s3-prod.eneg.de`)
      kind: Rule
      services:
        - name: garage-s3
          namespace: garage
          port: 3900
  tls:
    secretName: garage-s3-tls
---
# IngressRoute fuer Garage WebUI (PROD)
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: garage-webui
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`s3-gui-prod.eneg.de`)
      kind: Rule
      services:
        - name: garage-webui
          namespace: garage
          port: 3909
  tls:
    secretName: garage-webui-tls
